# blendipose

./: .gitignore  EXIT_HANG.md  MANIFEST.in  NUMBA_BUG.md  README.md  hang_fix_writeup.md  pyproject.toml
.github/workflows/: python-publish.yml
src/blendipose/: __init__.py  renderer.py  util.py
src/blendipose/blendify/: FUTURE.md  __init__.py  compat.py  scene.py
src/blendipose/blendify/cameras/: base.py  common.py
src/blendipose/blendify/colors/: base.py  common.py  texture.py
src/blendipose/blendify/internal/: io.py  parser.py  positionable.py  texture.py  types.py
src/blendipose/blendify/lights/: area.py  base.py  collection.py  common.py
src/blendipose/blendify/materials/: base.py  bsdf.py  emission.py  metal.py  plastic.py  wireframe.py
src/blendipose/blendify/renderables/: base.py  collection.py  mesh.py  pointcloud.py  primitives.py
src/blendipose/blendify/utils/: camera_trajectory.py  image.py  pointcloud.py  shadow_catcher.py  smpl_wrapper.py
