[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "blendipose"
dynamic = ["version"]
description = "Render human motion sequences with Blender, with or without overlaying on a video"
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"

dependencies = [
    'numpy',
    'numba',
    'opencv-python',
    'shapely',
    'trimesh',
    'blendify @ git+https://github.com/isarandi/blendify.git',
    'cameravision',
    'framepump',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/isarandi/blendipose"
Repository = "https://github.com/isarandi/blendipose"
Issues = "https://github.com/isarandi/blendipose/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "src/blendipose/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
skip-string-normalization = true
